# rnb

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  ruff.toml  settings.ini
.github/workflows/: pre-commit.yml
examples/: complete_rnb_agent.py  demo_gloss_influence.py  demo_personality.py  demo_resources.py  demo_validation.py  llm_basic_usage.py  memory_aware_agent.py  simple_agent.py
src/rnb/: __init__.py  console.py  logging.py
src/rnb/influence/: __init__.py  base.py  context.py  gloss_engine.py  gloss_operator.py  operators.py  registry.py
src/rnb/llm/: __init__.py  client.py  exceptions.py
src/rnb/memory/: __init__.py  backend.py  store.py  types.py
src/rnb/personality/: __init__.py  backend.py  exceptions.py  factory.py  manager.py  state.py  store.py  taxonomy.py  traits.py.old
src/rnb/resources/: __init__.py  adjective_resolver.py  (+5 more)
tests/integration/: __init__.py  conftest.py  test_conscientiousness_effects.py  test_cooperation_effects.py  test_cross_dimensional_effects.py  test_memory_integration.py
tests/unit/: test_affect_mood_operators.py  test_gloss_influence.py  test_influence_base.py  test_influence_context.py  test_llm_client.py  test_memory_backend.py  test_memory_store.py  test_memory_types.py  test_modifiers.py  test_operator_registry.py  test_personality.py  test_personality_backend.py  test_personality_manager.py  test_personality_store.py  test_phrase_parser_negation.py  test_spacy_parser.py  test_trait_based_operators.py
tests/validation/: conftest.py  test_conformity.py
(+26 files in other folders)
