[tool.poetry]
name = "rnb4llm"
version = "0.1.0"
description = "RnB Framework for LLM Agents"
authors = ["francois.bouchet@lip6.fr"]
package-mode = true
readme = "README.md"
packages = [{ include = "rnb", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
redis = "^7.0.1"
chromadb = "^1.3.4"
openai = "^2.8.0"
anthropic = "^0.73.0"
instructor = "^1.13.0"
pydantic = "^2.12.4"
jinja2 = "^3.1.6"
python-dotenv = "^1.2.1"
pyyaml = "^6.0.2"
#numpy = "^2.0.0"

[tool.poetry.group.dev.dependencies]
# --- Development / QA ---
pre-commit = "*"
ruff = "^0.14.5"
mypy = "^1.13"

pytest = "^9.0.1"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
hypothesis = "*"

black = "^25.11.0"
isort = "*"

[tool.poetry.group.notebooks.dependencies]
# --- Notebook / analysis environment ---
jupyter = "*"
pandas = "*"
numpy = "*"
matplotlib = "*"
seaborn = "*"
papermill = "*"

[tool.poetry.group.ml.dependencies]
# --- ML stack ---
scikit-learn = "*"

[tool.poetry.group.research.dependencies]
# --- Project tooling ---
nbdev = "*"
dvc = "*"

[tool.poetry.group.rich.dependencies]
# --- Pretty console/logging output ---
rich = "^13.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

